# plant_model_ibm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  README.md.in  USER_GUIDE.md  USER_GUIDE.md.in  log.conf  main.cpp  maintest.cpp  mockmain.cpp  plants.h  test_toupdate.cpp  tests.cpp  todolist.txt
999-test/: disturbances.json  management.json  mask.json  nine.json  ninesoil.json  unchanging_soil.json
doc/: Odd.docx
include/: easylogging++.h
include/jointModel/: Landscape.h  a_generalFunctions_vmvc.cpp  a_generalFunctions_vmvc.h  g_Data_BASE.cpp  g_Data_BASE.h  g_GSP_BASE.cpp  g_GSP_BASE.h  g_Inputs.h  generalFunctions.h
include/plants/: plants.h
rscripts/: cell_abund_2.R  json_example.r  pfgCreation.r
src/: CMakeLists.txt  Cell.cpp  Cell.h  Cohort.h  Community.cpp  Community.h  Data_PLANTS.cpp  Data_PLANTS.h  FGUtils.cpp  FGUtils.h  FuncGroup.cpp  FuncGroup.h  GSP_PLANTS.cpp  GSP_PLANTS.h  HabSuit.cpp  HabSuit.h  Illumination.cpp  Illumination.h  Individual.cpp  Individual.h  LifeHistory.cpp  LifeHistory.h  PFG.cpp  PFG.h  PFGDefs.cpp  PFGDefs.h  PFGdisturbance.cpp  PFGdisturbance.h  PlantGrowth.cpp  PlantGrowth.h  PlantModel.cpp  PlantModel.h  PlantResource.cpp  PlantResource.h  PropPool.cpp  PropPool.h  ResourceAlloc.cpp  ResourceAlloc.h  SeedBiology.cpp  SeedBiology.h  (+53 more)
tests/: CMakeLists.txt  CellTest.cpp  CommunityTest.cpp  DataTest.cpp  FuncGroupTest.cpp  HabSuitTest.cpp  IlluminationTest.cpp  IndividualTest.cpp  LifeHistoryTest.cpp  NeighbourTest.cpp  PlantGrowthTest.cpp  PlantModelTest.cpp  PlantModelTestNoDisp.cpp  PlantShapeTest.cpp  PropPoolTest.cpp  ResourceAllocTest.cpp  ResourceTest.cpp  SeedBiologyTest.cpp  SeedPoolTest.cpp  SoilReqsTest.cpp  TraitsTest.cpp  debuglog.conf  landscape1.json  landscape2.json  landscape3.json  landscape4.json  log.conf  plantlog.conf  test.json  test_noDisp.json  traits.json  verena.json
tests/IN/: depth.json  depthN.json  disturbances.json  fullPFG.json  light.json  light2.json  lightN.json  soilclass.json  soilclassN.json
tests/RESULTS/: biomass_1.json  biomass_2.json  biomass_4.json
tests/dataTests/: LogConf.json  noLogConf.json
tests/verena/: depth.json  light.json  management.json  plantSpecies.json  soilclass.json
